update to best practices and make make the USER environment variable available in the container

--- a/molecule/default/Dockerfile.j2
+++ b/molecule/default/Dockerfile.j2
@@ -37,6 +37,7 @@ RUN useradd -m -d /home/devel -u 1000 -U -G users,tty -s /bin/bash devel
 # Add devel user to build packages
 RUN echo 'devel ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 USER devel
+ENV USER devel
 ENV TERM dumb
 RUN git config --global user.email devel@a.b && git config --global user.name devel
 
